--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "autoprefixer": "10.4.17",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "easymde": "^2.18.0",
     "eslint": "8.56.0",
-    "eslint-config-next": "14.1.0",
-    "next": "14.1.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
     "postcss": "8.4.33",
     "prisma": "^5.3.1",
     "react": "18.2.0",
