chore: dev docker-compose & Dockerfile setting

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+MYSQL_ROOT_PASSWORD=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
