--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:up": "echo 'init' | npx prisma migrate dev"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^6.0.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.3",
     "@sentry/nextjs": "^7.101.1",
@@ -29,7 +33,6 @@
     "next": "^13.5.7",
     "next-auth": "^4.23.1",
     "postcss": "8.4.33",
-    "prisma": "^5.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
@@ -46,6 +49,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
     "prettier": "^3.2.4",
-    "prettier-plugin-tailwindcss": "^0.5.11"
+    "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "^6.0.1"
   }
 }
