--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,11 +8,32 @@ services:
       dockerfile: ./Dockerfile.prod
     ports:
       - 3000:3000
+    depends_on:
+      - db
+    volumes: 
+      - .:/app
     command: ./docker-entrypoint.sh prod
-    restart: unless-stopped
+    networks:
+      - issue-tracker-network
+  db:
+    image: mysql:latest
+    container_name: issue-tracker-mysql
+    ports:
+      - 33060:3306
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    volumes:
+      - issue-tracker:/data/db
     networks:
       - issue-tracker-network
 
+volumes:
+  issue-tracker:
+
 networks:
   issue-tracker-network:
-    external: true
+    name: issue-tracker-network
+    driver: bridge
