--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: ./Dockerfile.prod
     ports:
-      - 3000:3000
+      - 3001:3000
     depends_on:
       - db
     volumes: 
@@ -19,7 +19,7 @@ services:
     image: mysql:latest
     container_name: issue-tracker-mysql
     ports:
-      - 33060:3306
+      - 33061:3306
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -32,6 +32,7 @@ services:
 
 volumes:
   issue-tracker:
+    name: issue-tracker
 
 networks:
   issue-tracker-network:
